resources/docs/1.7/events/simple-events.md
# Simple Events

In Eventmie Pro, you can create a single & multiple days event. Each event belongs to an organizer. Admin & Organizers can create events from the front-end.

---

![Simple event view](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-view.jpg "Simple event view")

---

>{success} We'll discuss repetitive & online events and classes in the next sections. We'll focus on each option in their own section to avoid confusion. 

---

>{primary} From here, we'll be guiding you through all the features of the front-end.

---


- [Create Simple Event](#create-simple-event)
- [Details <small class="v">v1.7</small>](#Details)
- [Timing](#Timing)
- [Tickets <small class="v">v1.7</small>](#Tickets)
- [Location](#Location)
- [Media](#Media)
- [SEO](#SEO)
- [Powered By](#powered-by)


<a name="create-simple-event"></a>
## Create Simple Event

Simple event here refers to single or multiple days event. Click on <larecipe-button type="primary" size="sm" rounded>Create Event</larecipe-button> to get started. 😤


<a name="Details"></a>
## Details <small class="v">v1.7</small>

The first step is mandatory to proceed to the next step. Add these details to proceed to the next steps-

- Select Organiser (if logged in as Admin)
- Category
- Event name
- Event excerpt (optional)
- Event URL (auto-generated)
- Description
- Why to attend event? (optional)
- Offline Payment Instructions (Instructions to show under **Offline Payment** Option) <small class="v">v1.7</small>

<br>
    
**(Only Admin can modify these two options)**

- Event Featured (if logged in as Admin) (set Event as Featured)
- Event Status (if logged in as Admin) (force Enable/Disable event)

---

![Event Detail Form](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-detail-new.jpg "Event Detail Form")

---


<a name="Timing"></a>
## Timing

Set timing for single or multiple days event.

<br>

**Form Fields**

- Start date
- Start time
- End date
- End time

---

![Event Timing Form](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-timings.jpg "Event Timing Form")

---

>{warning} Do not check the `Add Repetitive Schedules`, we'll discuss it in its own section. 

---


<a name="Tickets"></a>
## Tickets <small class="v">v1.7</small>

Create tickets for the event. 

- Tickets can be `Free` or `Paid`. 
- Taxes can be applied to each ticket separately.
- Multiple taxes can also be applied to each ticket.

<br>

**Form Fields**

- Title
- Price (set 0 for Free ticket)
- Capacity (max bookings each ticket)
- Booking Limit Per Customer (For how many times the same customer can purchase this ticket) <small class="v">v1.7</small>
- Description (ticket amenities info) (optional)
- Taxes (optional)

---

![Events free & paid tickets with taxes](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-ticket-1.7.jpg "Events free & paid tickets with taxes")

---


<a name="Location"></a>
## Location

Event location details. You need to enter `Google map Lat-long` manually to show the venue pinned on the google map on the event page.

<br>

**Form Fields**

- Venue
- Google Map Lat (optional)
- Google Map Long (optional)
- Address (optional)
- City (optional)
- State (optional)
- Zipcode (optional)
- Country (optional)

---

![Events venue & google map location](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-location.jpg "Events venue & google map location")

---

>{warning} Do not check the `Online Event`, we'll discuss it in its own section. 

---


<a name="Media"></a>
## Media

Upload event poster, thumbnail, and images. Please upload the mentioned size of images. You can also crop and adjust them.

<br>

**Form Fields**

- Thumbnail
- Poster Image 
- Images Gallery (optional)
- YouTube Video ID (optional)

---

>{success} Now you can manage Gallery images easily by adding or removing them one-by-one.

---

![Upload Event cover images & youtube video URL](https://eventmie-pro-docs.classiebit.com/images/events-manage-gallery-images.jpg "Upload Event cover images & youtube video URL")

---



<a name="SEO"></a>
## SEO

Write meta titles, keywords, and descriptions. These tags will be specific for each event, for event-specific SEO.

**Form Fields**

- Meta Title (optional)
- Meta Tags/Keywords (optional)
- Meta Description (optional)

---

![Event seo](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-seo.jpg "Event seo")

---


<a name="powered-by"></a>
## Powered By

Final step- 

1. Select tags (optional).
2. Click &nbsp;<larecipe-button type="info" size="sm" rounded>Save</larecipe-button>
3. Then click &nbsp;<larecipe-button type="success" size="sm" rounded>Publish</larecipe-button>
4. You can `Un-publish` / `Publish` anytime. 

---

>{primary} You can also create new Tags directly from Powered By Tab. We'll guide you about this in the Tags section.

---

![Event Tags & Publish](https://eventmie-pro-docs.classiebit.com/images/events-simple-event-powered-by.jpg "Event Tags & Publish")

---

> {success} see the `Published` event on listing page &nbsp;<larecipe-button type="secondary" size="sm" rounded>Browse Events</larecipe-button>

---

>{primary} Event can be `published` only after completing - `Details`, `Timings`, `Tickets`, `Location` & `Media`.

---